[package]
name = "bytestashy"
description = "A command-line interface for ByteStash for the easy posting of snippets without opening a browser."
version = "0.1.0"
edition = "2024"
repository = "https://github.com/LetsDrinkSomeTea/bitscli"
license-file = "LICENSE"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "snippets", "bytestash"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
dialoguer = "0.11.0"
anyhow = "1.0"
keyring = { version = "3.6.2", features = ["linux-native", "linux-native-sync-persistent", "sync-secret-service"] }
