[package]
name = "bytestashy"
description = "A command-line interface for ByteStash for the easy posting of snippets without opening a browser."
version = "0.3.1"
edition = "2024"
repository = "https://github.com/LetsDrinkSomeTea/bytestashy"
license-file = "LICENSE"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "snippets", "bytestash"]


[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
reqwest = { version = "0.12.19", features = ["json", "multipart", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
dialoguer = "0.11.0"
anyhow = "1.0"
keyring = { version = "3.6.2", features = ["linux-native", "linux-native-sync-persistent", "sync-secret-service"] }
colored = "3.0.0"
thiserror = "2.0.12"
indicatif = "0.17"
tracing = "0.1"
urlencoding = "2.1"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
